@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.gateway;
@@ -30,8 +31,10 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.UnaryOperator;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -46,7 +49,7 @@ public class GatewayMetaStateTests extends ESTestCase {
                 IndexTemplateMetadata.builder("added_test_template").patterns(randomIndexPatterns()).build()
             );
             return templates;
-        }));
+        }), List.of());
 
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
@@ -56,7 +59,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testNoMetadataUpgrade() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -67,7 +70,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testCustomMetadataValidation() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         try {
             GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         } catch (IllegalStateException e) {
@@ -77,7 +80,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testIndexMetadataUpgrade() {
         Metadata metadata = randomMetadata();
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(true), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -88,7 +91,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testCustomMetadataNoChange() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new));
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -97,11 +100,74 @@ public class GatewayMetaStateTests extends ESTestCase {
         }
     }
 
+    public void testCustomMetadata_appliesUpgraders() {
+        CustomMetadata2 custom2 = new CustomMetadata2("some data");
+        // Test with a CustomMetadata1 and a CustomMetadata2...
+        Metadata originalMetadata = Metadata.builder()
+            .putCustom(CustomMetadata1.TYPE, new CustomMetadata1("data"))
+            .putCustom(CustomMetadata2.TYPE, custom2)
+            .build();
+        // ...and two sets of upgraders which affect CustomMetadata1 and some other types...
+        Map<String, UnaryOperator<Metadata.Custom>> customUpgraders = Map.of(
+            CustomMetadata1.TYPE,
+            toUpgrade -> new CustomMetadata1("new " + ((CustomMetadata1) toUpgrade).getData()),
+            "not_" + CustomMetadata1.TYPE,
+            toUpgrade -> {
+                fail("This upgrader should not be invoked");
+                return toUpgrade;
+            }
+        );
+        Map<String, UnaryOperator<Metadata.Custom>> moreCustomUpgraders = Map.of("also_not_" + CustomMetadata1.TYPE, toUpgrade -> {
+            fail("This upgrader should not be invoked");
+            return toUpgrade;
+        });
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the CustomMetadata1 has been upgraded...
+        assertEquals(new CustomMetadata1("new data"), upgradedMetadata.custom(CustomMetadata1.TYPE));
+        // ...but the CustomMetadata2 is untouched.
+        assertSame(custom2, upgradedMetadata.custom(CustomMetadata2.TYPE));
+    }
+
+    public void testCustomMetadata_appliesMultipleUpgraders() {
+        // Test with a CustomMetadata1 and a CustomMetadata2...
+        Metadata originalMetadata = Metadata.builder()
+            .putCustom(CustomMetadata1.TYPE, new CustomMetadata1("data"))
+            .putCustom(CustomMetadata2.TYPE, new CustomMetadata2("other data"))
+            .build();
+        // ...and a set of upgraders which affects both of those...
+        Map<String, UnaryOperator<Metadata.Custom>> customUpgraders = Map.of(
+            CustomMetadata1.TYPE,
+            toUpgrade -> new CustomMetadata1("new " + ((CustomMetadata1) toUpgrade).getData()),
+            CustomMetadata2.TYPE,
+            toUpgrade -> new CustomMetadata2("new " + ((CustomMetadata2) toUpgrade).getData())
+        );
+        // ...and another set of upgraders which applies a second upgrade to CustomMetadata2...
+        Map<String, UnaryOperator<Metadata.Custom>> moreCustomUpgraders = Map.of(
+            CustomMetadata2.TYPE,
+            toUpgrade -> new CustomMetadata2("more " + ((CustomMetadata2) toUpgrade).getData())
+        );
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the first upgrader has been applied to the CustomMetadata1...
+        assertEquals(new CustomMetadata1("new data"), upgradedMetadata.custom(CustomMetadata1.TYPE));
+        // ...and both upgraders have been applied to the CustomMetadata2.
+        assertEquals(new CustomMetadata2("more new other data"), upgradedMetadata.custom(CustomMetadata2.TYPE));
+    }
+
     public void testIndexTemplateValidation() {
         Metadata metadata = randomMetadata();
         MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(customs -> {
             throw new IllegalStateException("template is incompatible");
-        }));
+        }), List.of());
         String message = expectThrows(
             IllegalStateException.class,
             () -> GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader)
@@ -135,8 +201,7 @@ public class GatewayMetaStateTests extends ESTestCase {
                     .build()
             );
             return indexTemplateMetadatas;
-
-        }));
+        }), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertFalse(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -199,7 +264,11 @@ public class GatewayMetaStateTests extends ESTestCase {
         }
 
         @Override
-        public IndexMetadata verifyIndexMetadata(IndexMetadata indexMetadata, IndexVersion minimumIndexCompatibilityVersion) {
+        public IndexMetadata verifyIndexMetadata(
+            IndexMetadata indexMetadata,
+            IndexVersion minimumIndexCompatibilityVersion,
+            IndexVersion minimumReadOnlyIndexCompatibilityVersion
+        ) {
             return upgrade ? IndexMetadata.builder(indexMetadata).build() : indexMetadata;
         }
     }
@@ -208,6 +277,29 @@ public class GatewayMetaStateTests extends ESTestCase {
         public static final String TYPE = "custom_md_1";
 
         CustomMetadata1(String data) {
+            super(data);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TYPE;
+        }
+
+        @Override
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
+        }
+
+        @Override
+        public EnumSet<Metadata.XContentContext> context() {
+            return EnumSet.of(Metadata.XContentContext.GATEWAY);
+        }
+    }
+
+    private static class CustomMetadata2 extends TestCustomMetadata {
+        public static final String TYPE = "custom_md_2";
+
+        CustomMetadata2(String data) {
             super(data);
         }
 
